packages/flint/core/src/parser.ts
import { createDiagnostic, type FlintDiagnostic, type FlintSourceSpan } from './diagnostics.js';
import { parseFlintDocumentation } from './documentation.js';
import { deriveFlintModuleId } from './identity.js';
import { lexFlint, type FlintToken } from './lexer.js';

import type {
  FlintBinaryOperator,
  FlintCapabilityImport,
  FlintEnumDeclaration,
  FlintEnumVariant,
  FlintSwitchCase,
  FlintExpression,
  FlintFunction,
  FlintGenericParameter,
  FlintInterfaceDeclaration,
  FlintInterfaceFunction,
  FlintMatchArm,
  FlintPattern,
  FlintModule,
  FlintParameter,
  FlintPrimitiveType,
  FlintSourceModuleImport,
  FlintStatement,
  FlintTypeName,
  FlintStructDeclaration,
  FlintStructField,
  FlintStructRepr,
  FlintForeignCapabilityDeclaration,
  FlintForeignFunctionDeclaration,
  FlintForeignFunctionParameter,
  FlintOpaqueForeignTypeDeclaration,
} from './ast.js';

/**
 * Result object returned by the Flint parser containing the parsed module and diagnostics.
 */
export interface FlintParseResult {
  readonly module?: FlintModule;
  readonly diagnostics: readonly FlintDiagnostic[];
}

/**
 * Options configuring parsing behavior and diagnostic collection.
 */
export interface FlintParseOptions {
  readonly root?: string;
}

export const primitiveTypes = new Set<FlintPrimitiveType>([
  'bool',
  'bytes',
  'f32',
  'f64',
  'i32',
  'i64',
  'string',
  'u32',
  'u64',
  'unit',
  'u8',
  'i8',
  'c_char',
  'c_uchar',
  'c_short',
  'c_ushort',
  'c_int',
  'c_uint',
  'c_long',
  'c_ulong',
  'c_longlong',
  'c_ulonglong',
  'c_size',
  'c_ssize',
  'c_float',
  'c_double',
  'c_void',
]);

/**
 * Recursive descent parser for the Flint programming language.
 */
class Parser {
  private readonly diagnostics: FlintDiagnostic[];
  private index = 0;

  private readonly tokens: readonly FlintToken[];
  private readonly fileName: string;

  /**
   * Initializes a new Parser instance for the given source file and token stream.
   *
   * @param tokens - Lexed token stream.
   * @param fileName - Canonical file path identifier.
   * @param diagnostics - Diagnostic report accumulator.
   */
  public constructor(tokens: readonly FlintToken[], fileName: string, diagnostics: readonly FlintDiagnostic[]) {
    this.tokens = tokens;
    this.fileName = fileName;
    this.diagnostics = [...diagnostics];
  }

  /**
   * Parses the loaded token stream into a complete AST module with diagnostics.
   *
   * @returns Parse result containing the compiled module and accumulated diagnostics.
   */
  // skipcq: JS-R1005
  public parse(): FlintParseResult {
    const start = this.tokens.find(({ kind }) => kind !== 'comment')?.span ?? this.current().span;
    const imports: FlintCapabilityImport[] = [];
    const sourceImports: FlintSourceModuleImport[] = [];
    const structs: FlintStructDeclaration[] = [];
    const enums: FlintEnumDeclaration[] = [];
    const interfaces: FlintInterfaceDeclaration[] = [];
    const functions: FlintFunction[] = [];
    const foreignCapabilities: FlintForeignCapabilityDeclaration[] = [];
    const opaqueForeignTypes: FlintOpaqueForeignTypeDeclaration[] = [];
    let pendingDocumentation = this.consumeTopLevelTrivia();
    if (this.is('module')) {
      pendingDocumentation = undefined;
      const legacy = this.consume();
      this.diagnostics.push(
        createDiagnostic(
          this.fileName,
          'parse',
          'FLINT-PARSE-001',
          'Nested module declarations are no longer supported; declarations are file-scoped.',
          legacy.span,
          'error',
          'Remove the module name and surrounding braces from this file.',
        ),
      );
      this.expectIdentifier('FLINT-PARSE-002', 'Expected a legacy module name.');
      this.expect('{', 'FLINT-PARSE-003', "Expected '{' after the legacy module name.");
    }
    while (true) {
      const documentation = pendingDocumentation ?? this.consumeTopLevelTrivia();
      pendingDocumentation = undefined;
      if (this.is('}') || this.is('eof')) break;
      const startIndex = this.index;
      try {
        this.parseTopLevelDeclaration(documentation, {
          imports,
          sourceImports,
          structs,
          enums,
          interfaces,
          functions,
          foreignCapabilities,
          opaqueForeignTypes,
        });
      } catch {
        this.synchronizeTopLevel();
      }
      if (this.index === startIndex && !this.is('}') && !this.is('eof')) {
        this.consume();
      }
    }
    const end = this.is('}')
      ? this.expect('}', 'FLINT-PARSE-004', "Expected '}' to close the legacy module.").span
      : this.previous().span;
    const module = {
      kind: 'module' as const,
      name: deriveFlintModuleId(this.fileName),
      imports,
      sourceImports,
      structs,
      enums,
      interfaces,
      functions,
      ...(foreignCapabilities.length === 0 ? {} : { foreignCapabilities }),
      ...(opaqueForeignTypes.length === 0 ? {} : { opaqueForeignTypes }),
      span: mergeSpans(start, end),
    };
    return { module, diagnostics: this.diagnostics };
  }

  /**
   * Checks whether the current token matches a disallowed object-oriented keyword.
   *
   * @returns True if current token is a forbidden class keyword.
   */
  // skipcq: JS-R1005
  private isDisallowedClassKeyword(): boolean {
    return (
      this.is('class') ||
      this.is('constructor') ||
      this.is('extends') ||
      this.is('impl') ||
      this.is('new') ||
      this.is('trait')
    );
  }

  /**
   * Parses a top-level capability or source module import statement.
   *
   * @param declarations - Target container collecting parsed declarations.
   */
  private parseTopLevelImport(declarations: {
    readonly imports: FlintCapabilityImport[];
    readonly sourceImports: FlintSourceModuleImport[];
  }): void {
    if (this.isNext('capability')) declarations.imports.push(this.parseImport());
    else declarations.sourceImports.push(this.parseSourceImport());
  }

  /** Validates that an alignment number is a positive power of two. */
  // skipcq: JS-0105
  private static isPositivePowerOfTwo(value: number): boolean {
    return Number.isInteger(value) && value > 0 && (value & (value - 1)) === 0;
  }

  /**
   * Parses the argument clause of a `#[repr(packed(...))]` attribute.
   *
   * @returns Parsed packed struct representation directive.
   */
  // skipcq: JS-R1005
  private parsePackedRepr(): FlintStructRepr {
    let alignment = 1;
    if (this.match('(')) {
      const number_ = this.expectKind('number', 'FLINT-PARSE-094', 'Expected packed alignment number.');
      alignment = Number(number_?.text || '1');
      if (!Parser.isPositivePowerOfTwo(alignment)) {
        this.diagnostics.push(
          createDiagnostic(
            this.fileName,
            'parse',
            'FLINT-PARSE-073',
            `Packed alignment must be a positive power of two, got ${alignment}.`,
            number_?.span ?? this.previous().span,
          ),
        );
      }
      this.expect(')', 'FLINT-PARSE-095', "Expected ')' after packed alignment.");
    }
    return { kind: 'packed', alignment };
  }

  /**
   * Parses the argument clause of a `#[repr(align(...))]` attribute.
   *
   * @returns Parsed align struct representation directive.
   */
  // skipcq: JS-R1005
  private parseAlignRepr(): FlintStructRepr {
    this.expect('(', 'FLINT-PARSE-096', "Expected '(' after 'align'.");
    const number_ = this.expectKind('number', 'FLINT-PARSE-097', 'Expected alignment number.');
    const alignment = Number(number_?.text || '8');
    if (!Parser.isPositivePowerOfTwo(alignment)) {
      this.diagnostics.push(
        createDiagnostic(
          this.fileName,
          'parse',
          'FLINT-PARSE-073',
          `Struct alignment must be a positive power of two, got ${alignment}.`,
          number_?.span ?? this.previous().span,
        ),
      );
    }
    this.expect(')', 'FLINT-PARSE-098', "Expected ')' after alignment.");
    return { kind: 'align', alignment };
  }

  /**
   * Parses the representation kind inside a `#[repr(...)]` attribute clause.
   *
   * @returns Parsed struct representation directive or undefined if unrecognized.
   */
  private parseReprClause(): FlintStructRepr | undefined {
    this.expect('(', 'FLINT-PARSE-092', "Expected '(' after 'repr'.");
    const kind = this.expectIdentifier(
      'FLINT-PARSE-093',
      "Expected repr identifier ('C', 'packed', 'align', 'flint').",
    );
    let repr: FlintStructRepr | undefined;
    switch (kind) {
      case 'C': {
        repr = { kind: 'c' };
        break;
      }
      case 'packed': {
        repr = this.parsePackedRepr();
        break;
      }
      case 'align': {
        repr = this.parseAlignRepr();
        break;
      }
      case 'flint': {
        repr = { kind: 'flint' };
        break;
      }
      default: {
        break;
      }
    }
    this.expect(')', 'FLINT-PARSE-099', "Expected ')' after repr attribute arguments.");
    return repr;
  }

  /**
   * Parses a #[repr(...)] attribute if present.
   *
   * @returns Parsed struct representation directive or undefined.
   */
  private parseStructReprAttribute(): FlintStructRepr | undefined {
    if (!this.is('#')) return undefined;
    this.consume();
    this.expect('[', 'FLINT-PARSE-090', "Expected '[' after '#'.");
    const attribute = this.expectIdentifier('FLINT-PARSE-091', 'Expected attribute name.');
    let repr: FlintStructRepr | undefined;
    if (attribute === 'repr') {
      repr = this.parseReprClause();
    }
    this.expect(']', 'FLINT-PARSE-100', "Expected ']' after attribute.");
    return repr;
  }

  /**
   * Parses a single top-level module declaration item.
   *
   * @param documentation - Optional documentation comment attached to declaration.
   * @param declarations - Target container collecting parsed declarations.
   */
  // skipcq: JS-R1005
  private parseTopLevelDeclaration(
    documentation: FlintFunction['documentation'] | undefined,
    declarations: {
      readonly imports: FlintCapabilityImport[];
      readonly sourceImports: FlintSourceModuleImport[];
      readonly structs: FlintStructDeclaration[];
      readonly enums: FlintEnumDeclaration[];
      readonly interfaces: FlintInterfaceDeclaration[];
      readonly functions: FlintFunction[];
      readonly foreignCapabilities: FlintForeignCapabilityDeclaration[];
      readonly opaqueForeignTypes: FlintOpaqueForeignTypeDeclaration[];
    },
  ): void {
    let repr: FlintStructRepr | undefined;
    if (this.is('#')) {
      repr = this.parseStructReprAttribute();
      const attributeDocument = this.consumeTopLevelTrivia();
      if (attributeDocument !== undefined) documentation = attributeDocument;
    }
    if (this.is('foreign')) {
      declarations.foreignCapabilities.push(this.parseForeignCapability());
    } else if (this.is('opaque') && this.isNext('foreign')) {
      declarations.opaqueForeignTypes.push(this.parseOpaqueForeignType());
    } else if (this.is('import')) {
      this.parseTopLevelImport(declarations);
    } else if (this.is('struct') || this.is('record')) {
      declarations.structs.push(this.parseStruct(documentation, this.is('record'), repr));
    } else if (this.current().text === 'c_struct') {
      this.diagnostics.push(
        createDiagnostic(
          this.fileName,
          'parse',
          'FLINT-PARSE-034',
          "The 'c_struct' keyword is removed; use '#[repr(C)] struct' instead.",
          this.current().span,
        ),
      );
      this.consume();
      while (!this.is('}') && !this.is('eof')) {
        this.consume();
      }
      if (this.is('}')) this.consume();
    } else if (this.is('enum') || (this.is('export') && this.isNext('enum'))) {
      declarations.enums.push(this.parseEnum(documentation));
    } else if (this.is('interface')) {
      declarations.interfaces.push(this.parseInterface(documentation));
    } else if (this.isDisallowedClassKeyword()) {
      this.rejectClassDeclaration();
    } else {
      declarations.functions.push(this.parseFunction(documentation));
    }
  }

  /**
   * Parses the sequence of foreign function declarations within a foreign capability block.
   *
   * @returns List of parsed foreign function declarations.
   */
  private parseForeignCapabilityFunctions(): FlintForeignFunctionDeclaration[] {
    const functions: FlintForeignFunctionDeclaration[] = [];
    while (true) {
      const documentation = this.consumeTopLevelTrivia();
      if (this.is('}') || this.is('eof')) break;
      functions.push(this.parseForeignFunction(documentation));
    }
    return functions;
  }

  /**
   * Parses a foreign capability block (e.g. foreign "C" capability "zstd" { ... }).
   *
   * @returns Parsed foreign capability declaration AST node.
   */
  private parseForeignCapability(): FlintForeignCapabilityDeclaration {
    const start = this.consume().span;
    const abiToken = this.expectKind('string', 'FLINT-PARSE-110', 'Expected ABI string (e.g. "C") after foreign.');
    const decodedAbi = abiToken === undefined ? 'C' : decodeString(abiToken.text);
    if (decodedAbi !== 'C') {
      this.diagnostics.push(
        createDiagnostic(
          this.fileName,
          'parse',
          'FLINT-PARSE-074',
          `Unsupported foreign ABI '${decodedAbi}'; only "C" is currently supported.`,
          abiToken?.span ?? start,
        ),
      );
    }
    const abi = 'C';
    this.expect('capability', 'FLINT-PARSE-111', "Expected 'capability' after foreign ABI.");
    const libraryToken = this.expectKind('string', 'FLINT-PARSE-112', 'Expected library name string after capability.');
    const library = libraryToken === undefined ? '<missing>' : decodeString(libraryToken.text);
    this.expect('{', 'FLINT-PARSE-113', "Expected '{' to start foreign capability block.");
    const functions = this.parseForeignCapabilityFunctions();
    const end = this.expect('}', 'FLINT-PARSE-114', "Expected '}' after foreign capability block.").span;
    return {
      kind: 'foreign-capability',
      abi,
      library,
      callingConvention: 'wasm-c-abi',
      functions,
      span: mergeSpans(start, end),
    };
  }

  /**
   * Parses the parameter list of a foreign function declaration.
   *
   * @returns List of parsed foreign function parameters.
   */
  private parseForeignParameters(): FlintForeignFunctionParameter[] {
    const parameters: FlintForeignFunctionParameter[] = [];
    if (this.is(')')) return parameters;
    while (true) {
      const parameterStart = this.current().span;
      const parameterName = this.expectIdentifier('FLINT-PARSE-118', 'Expected parameter name.');
      this.expect(':', 'FLINT-PARSE-119', "Expected ':' after parameter name.");
      const type = this.parseType();
      const parameterEnd = this.previous().span;
      parameters.push({
        name: parameterName ?? '<missing>',
        type,
        span: mergeSpans(parameterStart, parameterEnd),
      });
      if (this.match(',')) continue;
      break;
    }
    return parameters;
  }

  /**
   * Parses an individual foreign function prototype inside a foreign capability block.
   *
   * @param documentation - Optional documentation comment.
   * @returns Parsed foreign function declaration AST node.
   */
  private parseForeignFunction(documentation?: FlintFunction['documentation']): FlintForeignFunctionDeclaration {
    const start = this.current().span;
    this.expect('fn', 'FLINT-PARSE-115', "Expected 'fn' in foreign capability declaration.");
    const name = this.expectIdentifier('FLINT-PARSE-116', 'Expected function name in foreign capability declaration.');
    this.expect('(', 'FLINT-PARSE-117', "Expected '(' after function name.");
    const parameters = this.parseForeignParameters();
    this.expect(')', 'FLINT-PARSE-120', "Expected ')' after parameter list.");
    this.expect('->', 'FLINT-PARSE-121', "Expected '->' after parameter list.");
    const result = this.parseType();
    const end = this.expect(';', 'FLINT-PARSE-122', "Expected ';' after foreign function declaration.").span;
    return {
      kind: 'foreign-function',
      name: name ?? '<missing>',
      parameters,
      result,
      ...(documentation === undefined ? {} : { documentation }),
      span: mergeSpans(start, end),
    };
  }

  /**
   * Parses an opaque foreign type declaration (e.g. opaque foreign type ZstdContext;).
   *
   * @returns Parsed opaque foreign type AST node.
   */
  private parseOpaqueForeignType(): FlintOpaqueForeignTypeDeclaration {
    const start = this.consume().span;
    this.expect('foreign', 'FLINT-PARSE-123', "Expected 'foreign' after 'opaque'.");
    this.expect('type', 'FLINT-PARSE-124', "Expected 'type' after 'opaque foreign'.");
    const name = this.expectIdentifier('FLINT-PARSE-125', 'Expected type name after opaque foreign type.');
    const end = this.expect(';', 'FLINT-PARSE-126', "Expected ';' after opaque foreign type declaration.").span;
    return {
      kind: 'opaque-foreign-type',
      name: name ?? '<missing>',
      span: mergeSpans(start, end),
    };
  }

  /**
   * Parses a source module import statement binding an external module.
   *
   * @returns Parsed source module import AST node.
   */
  private parseSourceImport(): FlintSourceModuleImport {
    const start = this.consume().span;
    if (this.is('module')) this.consume();
    const source = this.expectKind('string', 'FLINT-PARSE-026', 'Expected a quoted source module path.');
    this.expect('as', 'FLINT-PARSE-027', "Expected 'as' followed by the source module alias.");
    const alias = this.expectIdentifier('FLINT-PARSE-028', 'Expected a source module alias.');
    const end = this.expect(';', 'FLINT-PARSE-029', "Expected ';' after a source module import.").span;
    return {
      kind: 'source-module-import',
      source: source === undefined ? '<missing>' : decodeString(source.text),
      alias: alias ?? '<missing>',
      span: mergeSpans(start, end),
    };
  }

  /**
   * Parses a host capability import statement binding a host interface.
   *
   * @returns Parsed capability import AST node.
   */
  private parseImport(): FlintCapabilityImport {
    const start = this.consume().span;
    this.expect('capability', 'FLINT-PARSE-005', "Expected 'capability' after 'import'.");
    const capabilityToken = this.expectKind('string', 'FLINT-PARSE-006', 'Expected a quoted capability name.');
    this.expect('as', 'FLINT-PARSE-007', "Expected 'as' followed by the local capability alias.");
    const alias = this.expectIdentifier('FLINT-PARSE-008', 'Expected a capability alias.');
    const parameters = this.parseParameters();
    this.expect('->', 'FLINT-PARSE-009', "Expected '->' before the capability result type.");
    const result = this.parseType();
    const end = this.expect(';', 'FLINT-PARSE-010', "Expected ';' after a capability declaration.").span;
    return {
      kind: 'capability-import',
      capability: decodeString(capabilityToken.text),
      alias: alias ?? '<missing>',
      parameters,
      result,
      span: mergeSpans(start, end),
    };
  }

  /**
   * Parses function declaration modifiers such as export, iter, or inline.
   *
   * @returns Parsed modifier flags.
   */
  // skipcq: JS-R1005
  private parseFunctionModifiers(): {
    exported: boolean;
    iterable: boolean;
    inlinePolicy?: FlintFunction['inlinePolicy'];
  } {
    let exported = false;
    let iterable = false;
    let inlinePolicy: FlintFunction['inlinePolicy'];
    while (true) {
      if (this.match('export')) exported = true;
      else if (this.match('iter')) iterable = true;
      else if (this.match('inline')) inlinePolicy = 'always';
      else if (this.match('noinline')) inlinePolicy = 'noinline';
      else break;
    }
    return { exported, iterable, inlinePolicy };
  }

  /**
   * Parses a function declaration AST node.
   *
   * @param documentation - Optional attached documentation comment.
   * @returns Complete function declaration AST node.
   */
  private parseFunction(documentation?: FlintFunction['documentation']): FlintFunction {
    const start = this.current().span;
    const { exported, iterable, inlinePolicy } = this.parseFunctionModifiers();
    this.expect('fn', 'FLINT-PARSE-011', "Expected 'fn' or 'export fn'.");
    const name = this.expectIdentifier('FLINT-PARSE-012', 'Expected a function name.');
    const genericParameters = this.parseGenericParameters();
    const parameters = this.parseParameters();
    this.expect('->', 'FLINT-PARSE-013', "Expected '->' before the function result type.");
    const result = this.parseType();
    const body = this.parseBlock();
    return {
      kind: 'function',
      name: name ?? '<missing>',
      exported,
      ...(iterable ? { iterable: true } : {}),
      ...(inlinePolicy === undefined ? {} : { inlinePolicy }),
      ...(documentation === undefined ? {} : { documentation }),
      genericParameters,
      parameters,
      result,
      body,
      span: mergeSpans(start, this.previous().span),
    };
  }

  /**
   * Parses generic type parameter declarations enclosed in angle brackets.
   *
   * @returns Array of parsed generic parameters.
   */
  // skipcq: JS-R1005
  private parseGenericParameters(): FlintGenericParameter[] {
    if (!this.match('<')) return [];
    const parameters: FlintGenericParameter[] = [];
    while (!this.is('>') && !this.is('eof')) {
      const start = this.current().span;
      const name = this.expectIdentifier('FLINT-PARSE-031', 'Expected a generic parameter name.');
      const bounds: string[] = [];
      if (this.match(':')) {
        do {
          const bound = this.expectIdentifier('FLINT-PARSE-032', 'Expected an interface bound.');
          if (bound !== undefined) bounds.push(bound);
        } while (this.match('+'));
      }
      parameters.push({
        kind: 'generic-parameter',
        name: name ?? '<missing>',
        bounds,
        span: mergeSpans(start, this.previous().span),
      });
      if (!this.match(',')) break;
    }
    this.expect('>', 'FLINT-PARSE-033', "Expected '>' after generic parameters.");
    return parameters;
  }

  /**
   * Parses a single field declaration within a struct body.
   *
   * @param fieldDocumentation - Optional field-level documentation.
   * @returns Parsed struct field AST node.
   */
  private parseStructField(fieldDocumentation?: FlintFunction['documentation']): FlintStructField {
    const fieldStart = this.current().span;
    const fieldName = this.expectIdentifier('FLINT-PARSE-036', 'Expected a struct field name.');
    this.expect(':', 'FLINT-PARSE-037', "Expected ':' after a struct field name.");
    const type = this.parseType();
    const end = this.match(',')
      ? this.previous().span
      : this.expect(';', 'FLINT-PARSE-038', "Expected ';' after a struct field.").span;
    return {
      kind: 'struct-field',
      name: fieldName ?? '<missing>',
      type,
      ...(fieldDocumentation === undefined ? {} : { documentation: fieldDocumentation }),
      span: mergeSpans(fieldStart, end),
    };
  }

  /**
   * Parses a struct or record type declaration.
   *
   * @param documentation - Optional attached documentation comment.
   * @param record - True if declared as a value record.
   * @param repr - Optional representation attribute metadata.
   * @returns Parsed struct declaration AST node.
   */
  // skipcq: JS-R1005
  private parseStruct(
    documentation?: FlintFunction['documentation'],
    record = false,
    repr?: FlintStructRepr,
  ): FlintStructDeclaration {
    const start = this.consume().span;
    const name = this.expectIdentifier('FLINT-PARSE-034', 'Expected a struct name.');
    const genericParameters = this.parseGenericParameters();
    this.expect('{', 'FLINT-PARSE-035', "Expected '{' after a struct name.");
    const fields: FlintStructField[] = [];
    while (true) {
      const fieldDocumentation = this.consumeTopLevelTrivia();
      if (this.is('}') || this.is('eof')) break;
      fields.push(this.parseStructField(fieldDocumentation));
    }
    const end = this.expect('}', 'FLINT-PARSE-039', "Expected '}' after a struct declaration.").span;
    return {
      kind: 'struct',
      name: name ?? '<missing>',
      ...(record ? { record: true as const } : {}),
      ...(repr?.kind === 'c' ? { c_struct: true as const } : {}),
      ...(repr === undefined ? {} : { repr }),
      ...(repr?.kind === 'packed' ? { packed: repr.alignment } : {}),
      ...(repr?.kind === 'align' ? { align: repr.alignment } : {}),
      ...(documentation === undefined ? {} : { documentation }),
      genericParameters,
      fields,
      immutable: true,
      span: mergeSpans(start, end),
    };
  }

  /**
   * Computes or parses an explicit numeric discriminant tag for an enum variant.
   *
   * @param previousTag - Numeric tag of preceding variant.
   * @returns Resolved numeric discriminant tag.
   */
  private parseEnumVariantTag(previousTag: number): number {
    let tag = previousTag + 1;
    if (this.match('=')) {
      const negative = this.match('-');
      const value = this.expectKind('number', 'FLINT-PARSE-045', 'Expected an integer enum discriminant.');
      tag = (negative ? -1 : 1) * Number(value.text || '0');
    }
    return tag;
  }

  /**
   * Parses an enum variant declaration with optional payload fields.
   *
   * @param variantDocumentation - Optional variant documentation.
   * @param previousTag - Preceding numeric discriminant tag.
   * @returns Parsed enum variant AST node.
   */
  // skipcq: JS-R1005
  private parseEnumVariant(previousTag: number): FlintEnumVariant {
    const variantStart = this.current().span;
    const variantName = this.expectIdentifier('FLINT-PARSE-042', 'Expected an enum variant name.');
    const fields = this.is('(') ? this.parseVariantFields() : [];
    const tag = this.parseEnumVariantTag(previousTag);
    const separated = this.match(',');
    const end = separated
      ? this.previous().span
      : variantName === undefined
        ? this.current().span
        : this.previous().span;
    if (!separated && !this.is('}') && !this.is('eof'))
      this.expect(',', 'FLINT-PARSE-043', "Expected ',' between enum variants.");
    return {
      kind: 'enum-variant',
      name: variantName ?? '<missing>',
      fields,
      tag,
      span: mergeSpans(variantStart, end),
    };
  }
